--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
 
@@ -10,7 +12,7 @@
     <tr>
       <td><img src="https://pbs.twimg.com/profile_images/1605657409787203605/-GXa3zh7_400x400.jpg" alt="Ceco Picture"></td>
       <td><h1>My Name</h1>
-  <p><em> Python Programer</em>
+  <p><em> Python Programmer</em>
     <br>
     <br>
     <a href="https://twitter.com/home">My Site</a></p>
@@ -88,16 +90,15 @@
 
   <h3>Ask me anything 📧</h3>
   <form  action="mailto:myemail@gmail.com"  method="post" enctype="text/plain">
+    <link rel=stylesheet" href="styles.css">
     <label>Your Name: </label>
     <input type="text" name="" value=""><br>
     <label>Your Email:</label>
     <input type="email" name="" value=""><br>
     <label>Your message:</label><br>
     <textarea name="" rows="8" cols="30" ></textarea><br>
-    <input type="submit" name=""><br>
+    <input type="submit" name=""><br> > </form>
 
-
-  <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
 
 </body>
 </html>
