--- a/index.html
+++ b/index.html
@@ -2,102 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Asen</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Merriweather:ital@1&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
 </head>
 <body>
-
-<table cellspacing="22">
-    <tr>
-      <td><img src="https://pbs.twimg.com/profile_images/1605657409787203605/-GXa3zh7_400x400.jpg" alt="Ceco Picture"></td>
-      <td><h1>My Name</h1>
-  <p><em> Python Programmer</em>
-    <br>
-    <br>
-    <a href="https://twitter.com/home">My Site</a></p>
-  <p> Learning programing , data science , data analytics , html , css and          many more </p>
-    <p><em>myemail@gmai.com</em></p>
-    <p><em>number: 004-333-221</em></p>
-      </td>
-    </tr>
-  </table>
+  <div class="top">
+      <img class="t-cloud" src="images/cloud.png" alt="Cloud png">
+      <h1> I`m Asen. </h1>
+      <h2> Python Programmer</h2>
+      <img class="b-cloud" src="images/cloud.png" alt="Cloud png">
+      <img src="images/mountain.png" alt="Mountain png">
+<div class="middle-container">
+  <div class="profile">
+    <img class="man" src="images/man.jpg" alt="me">
+    <h2>Hello.</h2>
+    <p> I am Python programmer , learning Data Science. </p>
   <hr>
-
-
-  <h3>Certificates:</h3>
-  <ul>
-    <li>Python 100 days of code</li>
-    <li>Excel for Data Science</li>
-    <li>SQL for Beginners</li>
-  </ul>
+  <div class="skills">
+    <h2>My Skills.</h2>
+    <div class="skill-row">
+      <img class="comp" src="images/computer.png" alt="">
+      <h3>Skill 1 </h3>
+      <p>This is my skill 2 </p>
+    </div>
+    <div class="skill-row">
+      <img class="chil" src="images/chillies.png" alt="">
+      <h3>Skill 2 </h3>
+      <p> This is my Skill 2 </p>
+    </div>
+  </div>
   <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>If you want to contact me :</h3>
+    <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+  </div>
+</div>
 
 
-  <h3> Skills </h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Python</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>HTML/CSS</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>SQL</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Excel</td>
-      <td>⭐⭐</td>
-    </tr>
-  </table>
-  <hr>
+<div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+  <a class="footer-link" href="https://twitter.com/">Twitter</a>
+  <a class="footer-link" href="https:// /">Website</a>
+  <p>© 2018 Name Surname.</p>
+</div>
 
 
-  <h3>My Hobbies</h3>
-  <ol>
-    <li> Fitness </li>
-    <li> Nature walks</li>
-    <li> Meditation</li>
-  </ol><hr>
 
-
-  <h3> Work Experience</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-
-    </tbody>
-    <tfoot>
-
-    </tfoot>
-    <tr>
-      <td>2017 - 2023 </td>
-      <td> Web Developer </td>
-    </tr>
-    <tr>
-      <td>2015 - 2017</td>
-      <td>Marketing Manager</td>
-    </tr>
-  </table> <hr>
-
-  <h3>Ask me anything 📧</h3>
-  <form  action="mailto:myemail@gmail.com"  method="post" enctype="text/plain">
-    <link rel=stylesheet" href="styles.css">
-    <label>Your Name: </label>
-    <input type="text" name="" value=""><br>
-    <label>Your Email:</label>
-    <input type="email" name="" value=""><br>
-    <label>Your message:</label><br>
-    <textarea name="" rows="8" cols="30" ></textarea><br>
-    <input type="submit" name=""><br> > </form>
 
 
 </body>
